# napari-DINOSim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
docs/: plugin_documentation.md
src/: DINOSim_advanced.ipynb  DINOSim_example.ipynb  dinoSim_example.ipynb  sam2_preprocessing.py
src/napari_dinosim/: __init__.py  _embedding_manager.py  _layer_handlers.py  _sam2_widget.py  _widget.py  data_utils_biapy.py  dinoSim_pipeline.py  napari.yaml  sam2_utils.py  utils.py
src/napari_dinosim/_tests/: __init__.py  test_pipeline.py  test_widget.py
src/napari_dinosim/utils/: __init__.py  data_utils_biapy.py  dinoSim_pipeline.py  gui_utils.py  sam2_utils.py  utils.py
