[project]
name = "napari-dinosim"
#dynamic = ["version"]
version = "0.1.4"  # Using static version instead of dynamic
description = "A simple plugin to use DINOSim in napari"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Aitor Gonzalez-Marfil"},
  {email = "aitorgacad@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.21.0",
    "magicgui>=0.5.0",
    "qtpy",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.62.0",
    "pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "opencv-python",
    "tifffile",
    "napari[all]"
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-xvfb>=3.0.0",
    "pytest-cov>=6.0",
    "pyqt5>=5.15.11",
]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.entry-points."napari.manifest"]
napari-dinosim = "napari_dinosim:napari.yaml"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["napari_dinosim*"]

[tool.setuptools.package-data]
"napari_dinosim" = ["*.yaml"]

# Using static version instead of dynamic
# [tool.setuptools.dynamic]
# version = {attr = "napari_dinosim.__init__.__version__"}

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 79
target-version = "py39"
fix = true
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
    "E731", # lambda assignment
    "E701", # multiple statements on one line
    "BLE001", # blind exception
    "G004", # logging f-string
    "SIM105", # contextlib.suppress
    "E402", # module level import not at top of file
    "G201", # logging exception
    "A001", # variable shadowing builtin
    "A002", # argument shadowing builtin
    "B008", # function call in argument default
    "SIM102", # nested if
    "F841", # unused variable
    "F401", # unused import
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
    "*.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["src/napari_dinosim/_tests"]
norecursedirs = ["private_tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
]

[project.urls]
Documentation = "https://github.com/AAitorG/napari-DINOSim#readme"
Repository = "https://github.com/AAitorG/napari-DINOSim"
Issues = "https://github.com/AAitorG/napari-DINOSim/issues"
