[tool:pytest]
testpaths = src/napari_dinosim/_tests
addopts = --verbose --cov=napari_dinosim --cov-report=term-missing

filterwarnings =
    ignore:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning
    ignore:xFormers is not available:UserWarning

[coverage:run]
source = napari_dinosim
omit =
    src/napari_dinosim/_tests/*
    src/napari_dinosim/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 79
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    venv,
    .tox,
    .mypy_cache,
    .pytest_cache
per-file-ignores =
    __init__.py:F401
max-complexity = 10

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE 

[options.extras_require]
testing = 
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest = 
    napari_dinosim = napari_dinosim:napari.yaml
